page tourdumonde et biencommencer initialized

--- a/tour-du-monde.html
+++ b/tour-du-monde.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="keywords" content=" création, site, internet, developpement, vitrine, commerce, personnel" />
-    <meta name="description" content="Création de site internet " />
+    <meta name="description" content="Site de promotion pour la création de site internet " />
     <meta name="author" content="Alexandre CHARLIER " />
-    <title>Alexandre CHARLIER</title>
+    <title>Creation de site internet</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&family=Pinyon Script&family=Miss Fajardose&display=swap" />
     <link rel="icon" type="image/svg+xml" href="./dist/pictures/logo/" sizes="392x68" />
-    <link rel="stylesheet" href="./dist/css/home-style.css" />
+    <link rel="stylesheet" href="./dist/css/tourdumonde-style.css" />
 </head>
 
 <body>
@@ -22,15 +22,11 @@
 
         <div class="container-entete">
             <div class="content-entete">
-                <nav class="entete-left">
-                    <ul class="entete-left__list">
-                        <li><a class="link-header" href="#decouvrir">Découvrir</a></li>
-                        <li><a class="link-header" href="#">loreum</a></li>
-                        <li><a class="link-header" href="#">loreum</a></li>
-                    </ul>
-                </nav>
+                <div class="entete-left">
+
+                </div>
                 <div class="entete-center">
-                    <p class="entete-center__logo">AC</p>
+                    <p class="entete-center__logo">A.C</p>
                 </div>
                 <div class="entete-right">
 
@@ -43,46 +39,18 @@
     <main>
         <div class="main-container">
             <div class="main-header">
-                <h1 class="main-header__title">Lorem Ipsum </h1>
-                <p class="main-header__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                <a class="main-header__link">Visiter</a>
+                <h1 class="main-header__title">Tour du monde </h1>
+                <p class="main-header__text">Site awards et differents sites d'animation ou avec des prix'</p>
+               <!--  <button class="main-header__btn">Click</button> -->
             </div>
-            <div class="main-center" id="decouvrir">
+            <div class="main-center">
                 <div class="main-center__header">
                     <div class="main-center__header-border"></div>
-                    <h2 class="main-center__header-title" ">Découvrir</h2>
+                    <h2 class="main-center__header-title">Lorem Ipsum</h2>
                     <div class="main-center__header-border"></div>
                 </div>
                 <div class="main-center__center">
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <img class="cards-img" src='./dist/pictures/libray.jpg' alt="">
-                        </div>
-                        <div class="cards-bottom">
-                            <p>Bien commencer</p>
-                            <a class="link-pos link-cards" href="/commencer.html">entrée</a>
-                        </div>
-                    </div>
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <canvas id="canvas" width="400" height="300"></canvas>
-                            <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
-                        </div>
-                        <div class="cards-bottom">
-                            <p>lOREUM IPSUM</p>
-                            <a class="link-pos link-cards" href="/tour-du-monde.html">Visite</a>
-                        </div>
-                    </div>
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <img class="cards-img" src='./dist/pictures/library-5902990_1920.jpg' alt="">
-                        </div>
-                        <div class="cards-bottom">
-                            <p>loreum ipsum</p>
-                            <a class="link-pos link-cards" href="/commencer.html">loreum</a>
-                        </div>
-                    </div>
+                    
                 </div>
 
             </div>
@@ -108,7 +76,7 @@
             </div>
         </section>
     </footer>
-    <script type ="module" src="index.js"></script>
+  <!--   <script type="module" src="index.js"></script> -->
 </body>
 
 </html>
