scroll for icon scrolltop and header visible scroll performed

--- a/commencer.html
+++ b/commencer.html
@@ -22,15 +22,23 @@
 
         <div class="container-entete">
             <div class="content-entete">
-                <div class="entete-left">
-
-                </div>
+                <nav class="entete-left" aria-label="naviguer vers d'autres sections du site">
+                    <ul class="entete-left__list">
+                        <li><a class="link-header" href="#decouvrir">Découvrir</a></li>
+                        <li><a class="link-header" href="#">loreum</a></li>
+                        <li><a class="link-header" href="#">loreum</a></li>
+                    </ul>
+                </nav>
                 <div class="entete-center">
-                    <h1 class="entete-center__logo">A.C</h1>
+                    <h1 class="entete-center__logo"><a href="./index.html" class="entete-center__logo">AC</a></h1>
                 </div>
-                <div class="entete-right">
+                <nav class="entete-right" aria-label="naviguer vers d'autres pages">
+                    <ul class="entete-right__list">
+                        <li><a class="link-header" href="#">contact</a></li>
+                        <li><a class="link-header" href="#">enveloppe</a></li>
+                    </ul>
+                </nav>
 
-                </div>
 
             </div>
 
