--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
     <link rel="icon" type="image/svg+xml" href="./dist/pictures/logo/" sizes="392x68" />
     <link rel="stylesheet" href="./dist/css/home-style.css" />
 </head>
-
 <body>
-
     <header>
-
-        <div class="container-entete">
+        <div class="container-entete" id="screen-top">
             <div class="content-entete">
-                <nav class="entete-left">
+                <nav class="entete-left" aria-label="naviguer vers d'autres sections du site">
                     <ul class="entete-left__list">
                         <li><a class="link-header" href="#decouvrir">Découvrir</a></li>
                         <li><a class="link-header" href="#">loreum</a></li>
@@ -30,14 +27,15 @@
                     </ul>
                 </nav>
                 <div class="entete-center">
-                    <p class="entete-center__logo">AC</p>
+                    <h1 class="entete-center__logo"><a href="./index.html" class="entete-center__logo">AC</a></h1>
                 </div>
-                <div class="entete-right">
-
-                </div>
-
+                <nav class="entete-right" aria-label="naviguer vers d'autres pages">
+                    <ul class="entete-right__list">
+                        <li><a class="link-header" href="#">contact</a></li>
+                        <li><a class="link-header" href="#">enveloppe</a></li>
+                    </ul>
+                </nav>
             </div>
-
         </div>
     </header>
     <main>
@@ -52,46 +50,49 @@
                 <div class="main-center__header">
                     <div class="main-center__header-border"></div>
                     <h2 class="main-center__header-title" ">Découvrir</h2>
-                    <div class="main-center__header-border"></div>
+                    <div class=" main-center__header-border">
                 </div>
-                <div class="main-center__center">
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <img class="cards-img" src='./dist/pictures/libray.jpg' alt="">
-                        </div>
-                        <div class="cards-bottom">
-                            <p>Bien commencer</p>
-                            <a class="link-pos link-cards" href="/commencer.html">entrée</a>
-                        </div>
+            </div>
+            <div class="main-center__center">
+                <div class="container-cards">
+                    <div class="cards-header">
+                        <img class="cards-img" src='./dist/pictures/libray.jpg' alt="">
                     </div>
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <canvas id="canvas" width="400" height="300"></canvas>
-                            <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
-                        </div>
-                        <div class="cards-bottom">
-                            <p>lOREUM IPSUM</p>
-                            <a class="link-pos link-cards" href="/tour-du-monde.html">Visite</a>
-                        </div>
-                    </div>
-                    <div class="container-cards">
-                        <div class="cards-header">
-                            <img class="cards-img" src='./dist/pictures/library-5902990_1920.jpg' alt="">
-                        </div>
-                        <div class="cards-bottom">
-                            <p>loreum ipsum</p>
-                            <a class="link-pos link-cards" href="/commencer.html">loreum</a>
-                        </div>
+                    <div class="cards-bottom">
+                        <p>Bien commencer</p>
+                        <a class="link-pos link-cards" href="/commencer.html">entrée</a>
                     </div>
                 </div>
+                <div class="container-cards">
+                    <div class="cards-header">
+                        <div class="divcanvas">
+                            <canvas id="canvas" width="300" height="150"></canvas>
+                        </div>
 
+                        <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
+                    </div>
+                    <div class="cards-bottom">
+                        <p>lOREUM IPSUM</p>
+                        <a class="link-pos link-cards" href="/tour-du-monde.html">Visite</a>
+                    </div>
+                </div>
+                <div class="container-cards">
+                    <div class="cards-header">
+                        <img class="cards-img" src='./dist/pictures/library-5902990_1920.jpg' alt="">
+                    </div>
+                    <div class="cards-bottom">
+                        <p>loreum ipsum</p>
+                        <a class="link-pos link-cards" href="/commencer.html">loreum</a>
+                    </div>
+                </div>
             </div>
-            <div class="main-bottom">
-                <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-            </div>
-            <div class="main-bottom-bottom">
+        </div>
+        <div class="main-bottom">
+            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+        </div>
+        <div class="main-bottom-bottom">
 
-            </div>
+        </div>
         </div>
 
     </main>
@@ -108,12 +109,8 @@
             </div>
         </section>
     </footer>
-    <script type ="module" src="index.js"></script>
+    <div id="container-scrollTop"><a id="scroll-top" href="#screen-top"><img src="dist/pictures/icons/drop_up.png"> </a></div>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
-<!-- 
-type and scrambled it to make a type specimen book. It has survived not only five centuries, but
-                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. -->
