test with github page for acces

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <div class="container-entete" id="screen-top">
+        <div class="container-entete" id="screen-top" data-visible = "true">
             <div class="content-entete">
                 <nav class="entete-left" aria-label="naviguer vers d'autres sections du site">
                     <ul class="entete-left__list">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="cards-bottom">
                         <p>lOREUM IPSUM</p>
-                        <a class="link-pos link-cards" href="/tour-du-monde.html">Visite</a>
+                        <a class="link-pos link-cards" href="tour-du-monde.html">Visite</a>
                     </div>
                 </div>
                 <div class="container-cards">
@@ -109,7 +109,7 @@
             </div>
         </section>
     </footer>
-    <div id="container-scrollTop"><a id="scroll-top" href="#screen-top"><img src="dist/pictures/icons/drop_up.png"> </a></div>
+    <div id="container-scrollTop" data-visible= "false"><a id="scroll-top" href="#screen-top"><img src="dist/pictures/icons/drop_up.png"> </a></div>
     <script type="module" src="index.js"></script>
 </body>
 
