toogle line from menu performed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
                         <li><a class="link-header" href="#">enveloppe</a></li>
                     </ul>
                 </nav>
+                <div class="entete-right__mobile">
+                    <div id="nav-icon" data-open="false">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                      </div>
+                </div>
+                
             </div>
         </div>
     </header>
