--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header>
         <div class="container-entete" id="screen-top" data-visible="true">
             <div class="content-entete">
-                <nav class="entete-left" aria-label="naviguer vers d'autres sections du site">
+                <nav class="entete-left" id="toogleMenu" data-toogle="false" aria-label="naviguer vers d'autres sections du site">
                     <ul class="entete-left__list">
                         <li><a class="link-header" href="#decouvrir">Découvrir</a></li>
                         <li><a class="link-header" href="#">loreum</a></li>
-                        <li><a class="link-header" href="#">loreum</a></li>
+                       <!--  <li><a class="link-header" href="#">loreum</a></li> -->
                     </ul>
                 </nav>
                 <div class="entete-center">
@@ -42,9 +42,8 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                      </div>
+                    </div>
                 </div>
-                
             </div>
         </div>
     </header>
@@ -60,42 +59,43 @@
                 <div class="main-center__header">
                     <div class="main-center__header-border"></div>
                     <h2 class="main-center__header-title" ">Découvrir</h2>
-           <div class=" main-center__header-border"></div>         <!--  -->
+           <div class=" main-center__header-border">
+                </div> <!--  -->
+            </div>
+        </div>
+        <div class="main-center__center">
+            <div class="container-cards">
+                <div class="cards-header">
+                    <img class="cards-img" src='./dist/pictures/libray.jpg' alt="">
+                </div>
+                <div class="cards-bottom">
+                    <p>Bien commencer</p>
+                    <a class="link-pos link-cards" href="commencer.html">entrée</a>
                 </div>
             </div>
-            <div class="main-center__center">
-                <div class="container-cards">
-                    <div class="cards-header">
-                        <img class="cards-img" src='./dist/pictures/libray.jpg' alt="">
+            <div class="container-cards">
+                <div class="cards-header">
+                    <div class="divcanvas">
+                        <canvas id="canvas" width="300" height="150"></canvas>
                     </div>
-                    <div class="cards-bottom">
-                        <p>Bien commencer</p>
-                        <a class="link-pos link-cards" href="commencer.html">entrée</a>
-                    </div>
-                </div>
-                <div class="container-cards">
-                    <div class="cards-header">
-                        <div class="divcanvas">
-                            <canvas id="canvas" width="300" height="150"></canvas>
-                        </div>
 
-                        <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
-                    </div>
-                    <div class="cards-bottom">
-                        <p>Tour du monde</p>
-                        <a class="link-pos link-cards" href="tour-du-monde.html">Visite</a>
-                    </div>
+                    <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
                 </div>
-                <div class="container-cards">
-                    <div class="cards-header">
-                        <img class="cards-img" src='./dist/pictures/library-5902990_1920.jpg' alt="">
-                    </div>
-                    <div class="cards-bottom">
-                        <p>loreum ipsum</p>
-                        <a class="link-pos link-cards" href="commencer.html">loreum</a>
-                    </div>
+                <div class="cards-bottom">
+                    <p>Tour du monde</p>
+                    <a class="link-pos link-cards" href="tour-du-monde.html">Visite</a>
                 </div>
             </div>
+            <div class="container-cards">
+                <div class="cards-header">
+                    <img class="cards-img" src='./dist/pictures/library-5902990_1920.jpg' alt="">
+                </div>
+                <div class="cards-bottom">
+                    <p>loreum ipsum</p>
+                    <a class="link-pos link-cards" href="commencer.html">loreum</a>
+                </div>
+            </div>
+        </div>
         </div>
         <div class="main-bottom">
             <div class="main-bottom-content">
@@ -123,7 +123,7 @@
             </div>
         </section>
     </footer>
-    <div id="container-scrollTop" data-visible = "false"><a id="scroll-top" href="#screen-top"><img
+    <div id="container-scrollTop" data-visible="false"><a id="scroll-top" href="#screen-top"><img
                 src="dist/pictures/icons/drop_up.png"> </a>
     </div>
     <script type="module" src="index.js"></script>
