menu hamburger with animate in progress

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="container-entete" id="screen-top" data-visible="true">
             <div class="content-entete">
-                <nav class="entete-left" id="toogleMenu" data-toogle="false" aria-label="naviguer vers d'autres sections du site">
+                <nav class="entete-left" id="toogleMenu"  aria-label="naviguer vers d'autres sections du site">
                     <ul class="entete-left__list">
                         <li><a class="link-header" href="#decouvrir">Découvrir</a></li>
                         <li><a class="link-header" href="#">loreum</a></li>
