sauvegarde pour test

--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
                 </div>
                 <div class="container-cards">
                     <div class="cards-header">
-                        <div class="divcanvas">
+                        <img class="cards-img" src='./dist/pictures/globe.jpg' alt="">
+                       <!--  <div class="divcanvas">
                             <canvas id="canvas" width="300" height="150"></canvas>
-                        </div>
-
-                        <!-- <img class="cards-img" src='./dist/pictures/dublin-2344423_1920.jpg' alt=""> -->
+                        </div> -->
                     </div>
                     <div class="cards-bottom">
                         <p>Tour du monde</p>
@@ -86,7 +85,7 @@
                 </div>
                 <div class="container-cards">
                     <div class="cards-header">
-                        <img class="cards-img" src='./dist/pictures/bridge.jpg' alt="">
+                        <img class="cards-img" src='./dist/pictures/stage.jpg' alt="">
                     </div>
                     <div class="cards-bottom">
                         <p>Réaliser</p>
@@ -102,9 +101,9 @@
                 </div>
             </div>
             <div class="main-bottom-bottom" id="main-bottom-faq">
-                <span>Une question, un avis ?</span>
-                <span>N'hesitez-pas</span>
-                <span>Cliquez button</span>
+                <p class="main-bottom-bottom__title">Une question, un avis ? N'hesitez-pas !</p>
+ <Button class="main-bottom-bottom__button">Cliquez</Button> 
+               <!--  <a class=" link-cards link-question" href="#">Contact</a> -->
             </div>
         </div>
     </main>
