--- a/tour-du-monde.html
+++ b/tour-du-monde.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/svg+xml" href="./dist/pictures/logo/" sizes="392x68" />
     <link rel="stylesheet" href="./dist/css/tourdumonde-style.css" />
 </head>
+
 <body>
     <!--  <script type="module" src="./script//globe.js"></script>  -->
     <header>
@@ -43,23 +44,29 @@
         <div class="main-container">
             <div class="main-header">
                 <div class="divcanvas">
-                <canvas id="canvasmain" width="300" height="150"></canvas>
+                    <canvas id="canvasmain" width="300" height="150"></canvas>
                 </div>
-              <!--   <h1 class="main-header__title">Tour du monde </h1>
+                <!--   <h1 class="main-header__title">Tour du monde </h1>
                 <p class="main-header__text">Site awards et differents sites d'animation ou avec des prix'</p> -->
                 <!--  <button class="main-header__btn">Click</button> -->
             </div>
             <div class="main-center">
                 <div class="main-center__header">
-                    <div class="main-center__header-border"></div>
-                    <h2 class="main-center__header-title">Lorem Ipsum</h2>
-                    <div class="main-center__header-border"></div>
+                    <!--  <div class="main-center__header-border"></div> -->
+                    <h2 class="main-center__header-title">Les Awwwards 2021</h2>
+                    <!--          <div class="main-center__header-border"></div> -->
                 </div>
                 <div class="main-center__center">
                 </div>
             </div>
-            <div class="main-bottom">
-                <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+            <div class="main-bottom-container">
+                <div class="main-bottom-content">
+                    <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+                    </p>
+                    <div class="vignette-awwward">
+                        
+                    </div>
+                </div>
             </div>
             <div class="main-bottom-bottom">
             </div>
@@ -78,8 +85,8 @@
             </div>
         </section>
     </footer>
-   <!--  <script type="module" src="./script//globe.js"></script> -->
-      <script type="module" src="tourdumonde.js"></script>
+    <!--  <script type="module" src="./script//globe.js"></script> -->
+    <script type="module" src="tourdumonde.js"></script>
 </body>
 
 </html>
